--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
-[submodule "nicktgr15.github.io"]
-	path = output
-	url = git@github.com:nicktgr15/nicktgr15.github.io.git
 [submodule "themes/pelican-alchemy"]
 	path = themes/pelican-alchemy
 	url = https://github.com/nairobilug/pelican-alchemy
+
+[submodule "output"]
+	path = output
+	url = https://github.com/nicktgr15/nicktgr15.github.io.git
