--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "plugins"]
 	path = plugins
 	url = https://github.com/getpelican/pelican-plugins.git
+[submodule "output"]
+    path = output
+        url = git@github.com:nicktgr15/blog.git
 [submodule "themes/pelican-alchemy"]
 	path = themes/pelican-alchemy
 	url = git@github.com:nicktgr15/pelican-alchemy.git
