--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "plugins"]
 	path = plugins
 	url = https://github.com/getpelican/pelican-plugins.git
-[submodule "git@github.com:nicktgr15/nicktgr15.github.io.git"]
-    path = plugins
+[submodule "output"]
+    path = output
     url = git@github.com:nicktgr15/nicktgr15.github.io.git
 [submodule "themes/pelican-alchemy"]
 	path = themes/pelican-alchemy
